Fixed printing errors on mobile and desktop, and fixed a fixed a few errors with cross-browser compatibilty

--- a/react-app/src/static/scss/home.scss
+++ b/react-app/src/static/scss/home.scss
@@ -6,13 +6,23 @@
     @page { size: auto; margin: 0;}
 
     #resume {
-        width: 100vw;
-        height: 99vh;
+        position: fixed;
+        min-width: 100%;
+        max-height: 99vh;
     }
+
+    @media (max-device-width: $mobile_width) {
+        #resume {
+            max-width: 75vw;
+        }
+    }
+
+    
     .intro_section {display: none;}
     .skills_section {display: none;}
     .projects_section {display: none;}
 }
+
 
 /* Tells the window what to show normally */
 @media screen {
@@ -164,18 +174,20 @@
         }
 
         .projects_section {
+            $height: 35vh;
+
             display: grid;
             justify-items: center;
             align-items: center;
             grid-template-columns: repeat(3, 1fr);
-            grid-column-gap: 20px;
+            grid-gap: 20px;
             width: 90%;
-            height: 35vh;
+            height: $height;
             min-height: 220px;
             margin: 30vh auto;
             overflow-x: auto;
             overflow-y: hidden;
-            padding: 10px;
+            padding: 20px;
 
             .floating_arrow {
                 @include flex-center;
@@ -186,17 +198,12 @@
                 margin: auto;
                 height: 3rem;
                 font-size: 3rem;
-                color: $text;
+                color: $contrast;
                 padding: 5px;
                 border-radius: .5rem;
                 z-index: 2;
                 cursor: pointer;
                 transition-duration: .2s;
-
-                &:hover {
-                    color: $primary;
-                    background-color: $text;
-                }
 
                 animation: {
                     duration: .6s;
@@ -219,7 +226,6 @@
 
             .project_container {
                 $width: 270px;
-                $height: 100%;
 
                 @include flex-center;
                 flex-direction: column;
@@ -254,7 +260,7 @@
                     overflow-y: hidden;
                     z-index: 1;
 
-                    animation: {
+                    -webkit-animation: {
                         duration: .4s;
                         timing-function: linear;
                         iteration-count: 1;
@@ -449,23 +455,25 @@
 
         /* Larger Desktop Widths */
         .projects_section {
+            $min-height: 300px;
+            $height: 33vh;
+
             display: grid;
             justify-items: center;
             align-items: center;
             grid-template-columns: repeat(3, 1fr);
             grid-gap: 5%;
-            wrap: flex-wrap;
+            height: $height;
+            min-height: $min-height;
             width: 65%;
             margin: 33vh auto;
-            padding: 10px;
+            padding: 15px;
             scroll-margin-top: 280px;
 
             .floating_arrow {display: none;}
 
             .project_container {
                 $width: 18vw;
-                $height: 33vh;
-                $min-height: 300px;
 
                 @include flex-center;
                 flex-direction: column;
@@ -501,7 +509,7 @@
                     overflow-y: hidden;
                     z-index: 1;
 
-                    animation: {
+                    -webkit-animation: {
                         duration: .4s;
                         timing-function: linear;
                         iteration-count: 1;
@@ -561,6 +569,8 @@
         @media (max-width: 1400px) {
             .projects_section {
                 grid-template-columns: repeat(2, 1fr);
+                grid-row-gap: 20px;
+                margin-bottom: 50vh;
 
                 .project_container {
                     $min-width: 260px;
